# txtplot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  GUIDE.md  LICENSE  README.md  RELEASE.md  flake.nix  justfile
.github/workflows/: no-warnings.yml
benches/: canvas_benchmark.rs
examples/: 3dengine.rs  aesthetics_showcase.rs  barcentertext.rs  betasolarsystem_kepler.rs  demo.rs  dj_decks.rs  figuresv2.rs  fireworks.rs  fireworksinterac.rs  fractal.rs  fractalmove.rs  heatmap_demo.rs  interactive_3d.rs  math_strees.rs  plasma.rs  primitives_demo.rs  renderer_showcase.rs  runtime_renderer.rs  solarsystem_kepler.rs  solarsystemnobody.rs  sprite_demo.rs  system_monitor.rs  tsne_neighbors.rs  vol_surface.rs  waves.rs
examples/support/: kepler.rs  mod.rs  solar.rs  terminal.rs  three_d.rs
scripts/: check-no-warnings.sh
src/: canvas.rs  charts.rs  lib.rs  prelude.rs  three_d.rs
src/canvas/: clipping.rs  composition.rs  mod.rs  pixels.rs  primitives.rs  render.rs  renderer.rs  selection.rs  tests.rs  text.rs  ui.rs
src/charts/: axes.rs  mod.rs  overlays.rs  range.rs  series.rs  tests.rs
